--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "noImplicitAny": False,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     
